appId: com.apple.springboard
---
- runFlow:
    when:
      visible:
        text: 'Open in "Expo Go"?'
    commands:
      - tapOn:
          text: "Open"
      - tapOn:
          point: "74%,66%"
          optional: true
      - waitForAnimationToEnd
- runFlow:
    when:
      visible:
        text: 'Open in "Expo Go"?'
    commands:
      - tapOn:
          point: "74%,66%"
      - waitForAnimationToEnd
